fix hamburger shift on desktop

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -49,7 +49,7 @@ web-header {
     // sass-lint:enable class-name-format
 
     @include bp(md) {
-      display: none;
+      display: none !important;
     }
   }
 
